Upgrade Docs to nicer styling

--- a/docs/styles/examples.css
+++ b/docs/styles/examples.css
@@ -1,41 +1,1 @@
-﻿/* reset */
-html {height:100%;width:100%}
-body {font:normal 62.5%/2em sans-serif;background:white;color:#333}
-acronym {cursor:help}
-html, body, h1, h2, h3, h4, h5, h6, form, ul, ol, li, dl, dt, dd, p {margin:0px;padding:0px;font-size:12px;list-style:none;text-align:left}
-:link, :visited, :hover, :active, :focus {text-decoration:none;outline:0px}
-h1, h2, h3, h4, h5, h6, pre, code, input, select, textarea, address, p, div, span {font:normal 12px sans-serif;text-align:left}
-a img,:link img,:visited img, fieldset, abbr {border:0px}
-table {border-collapse:collapse;border-spacing:0px}
-td, caption, th, tfoot, thead {text-align:left;vertical-align:top}
-input[type='submit'],input[type='button'],input[type='reset'] {text-align:center}
-q:before, q:after {content:""}
-.clearthis:after {content:".";display:block;height:0;clear:both;visibility:hidden}
-.clearthis {display:inline-block}
-.clearthis {display:block} /* Hides from IE-mac \*/
-
-/* example styles */
-body { font-family: Helvetica, Arial, sans-serif; padding: 20px }
-#wrapper { width: 980px; margin: 0px auto; padding-bottom: 40px }
-a:link, a:visited { color: blue; font-weight: bold }
-a:hover, a:active { color: red }
-#toc-link { position: fixed; top: 0px; left: 0px; z-index: 10000; width: 60%; text-align: right; padding: 3px 20% 3px; background: black; color: white }
-#toc .col { width: 25%; padding: 0px 0px 10px; float: left }
-h1#title { font-size: 40px; padding: 20px 0px 0px }
-h1 { font-size: 20px; font-weight: bold; margin: 0px 0px 5px; float: left; background: #ff9 }
-h2#description { font-size: 20px; padding: 0px 0px 20px }
-h2 { font-size: 16px; font-weight: bold; padding: 10px 0px 5px; clear: left }
-h3.option { font-size: 16px; font-weight: bold; padding: 20px 0px 5px; margin-bottom: 5px; color: #666; border-bottom: solid 1px #333 }
-code, pre { background: #e6ebeb; font-family: Courier; padding: 2px; margin: 0px; color: #666; white-space: pre-wrap }
-code span { font-family: Courier }
-pre { margin-bottom: 10px }
-var { color: #c00 }
-ul.list li { list-style: disc; margin-left: 15px }
-ol.numbers li { list-style-type: decimal; list-style-position: inside; margin-left: 5px }
-span.arrow { font-weight: bold; color: #000 }
-p { padding-bottom: 10px }
-.nopad { padding: 0px }
-.section { padding: 20px 0px 10px; border-top: dotted 1px #333 }
-.clear { clear: both }
-h1 + p { margin: 0px 20px; padding: 5px 0; vertical-align: baseline; border-bottom: dotted 1px #ccc; float: left }
-h1 + p + p { clear: both; font-style: italic; text-align: right }
+﻿
